Display dropdown to change app when the current app is Relationships, fix #1463
Former-commit-id: 78b41c70259423b2387c133f2d0c57d23700c609 [formerly af261f865ca301eeca70dbaa240acd851fe819ca] [formerly 386c302e1eef33b539b4e633197c0a81da36f1ef [formerly 20cf6ee43a0e2fec893192fd2b0319bf5b8b4a75]]
Former-commit-id: 797642d2ac453bf9e737adf192917e34ef6e1018 [formerly bb9a66456a2892925c5ce48786db04635f3e9f6e]
Former-commit-id: 14402cc190db81c3e452baaefcfe98d365c11659

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -13,11 +13,20 @@
 </div>
 <div class="row subHeader">
 <div class="currentApp">
-  <h2 class="page-title">
-    <!-- <img class="platform_icons" height="25" width="25" src="/static/img/admin_console.png"> -->
-    {{_(active_app.label)}}
-  </h2>
-</div>
+        <div class="btn-group">
+            <a class="filterItem" href="#" data-toggle="dropdown" >
+                {{_(active_app.label)}}
+                <i class="icon-angle-down fa fa-angle-down"></i>
+            </a>
+            <ul class="dropdown-menu">
+                {%for application in apps %}
+
+                <li><a href="/apps/{{ application.key.id()}}" data-toggle="modal">{{_(application.label)}}</a></li>
+
+                {%endfor%}
+            </ul>
+        </div>
+    </div>
   <div class=" subHeaderContent">
   <div class="col-md-9">
                   <h2 class="page-title">
