--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -5,7 +5,7 @@
 
             {{_(active_app.label)}}   
 
-            <i class="icon-angle-down"></i>
+            <i class="icon-angle-down fa fa-angle-down"></i>
            </a>
            <ul class="dropdown-menu">
             {%for application in apps %}
