--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -3,9 +3,9 @@
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
             {{_(active_app.label)}}
-            <i class="icon-angle-down"></i>
+            <i class="icon-angle-down fa fa-angle-down"></i>
            </a>
-           <ul class="dropdown-menu">
+           <ul class="dropdown-menu ">
             {%for application in apps %}
 
                   <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{_(application.label)}}</a></li>
