fixing isLoading bug on all abjects fix #1432
Former-commit-id: 5534737ea8b2cbaddd7920afcc0467dc65dcb74c [formerly 0b51789dcd93b7b900bc713dc8e88ff933dc7807] [formerly c5ba3dd8a8faac8dccb4b8d9277a80ac53a9df75 [formerly 3ca553881608f8fc3016744bc8f22c9f2cb98404]]
Former-commit-id: 11047594acc4638fe98642327ab2c7d1a402fa38 [formerly bbea8bd119e399331be32e14d98e1dcc0ef7f8e5]
Former-commit-id: 2174d1cb77234c34c9abf8a99858ac59e00f7225

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -393,7 +393,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12">
-                                            <span draggable  ng-drag="dragTagItem(task_tag.edgeKey)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                            <span draggable  ng-drag="dragTagItem(tag,task)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
