[Lead Show Bug]- when deleting opportunity, don't redirect me to opportunity fix #1448 Don't display (task not found) before loading Tasks in task List fix #1449
Former-commit-id: a9023aef167e2c1b4c87ca12f8fd3998b0b513de [formerly 903bc7ac86ec03cadc53aa88c9872f1feec1f624] [formerly 327b8981e453eafd15edeaef48e6ff906b3e4fb9 [formerly 1b81af25e4d2ad46e53bfe930512cadf3e87487f]]
Former-commit-id: 7f0f4eddb5dad71828df33ae5d423a2c2442d823 [formerly 3d3a30d89ea5f3dbd69c73f5e9efccc262bed780]
Former-commit-id: c81b3e9f5257d48f45cb59ea1949f5096949f79d

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -262,7 +262,7 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                  <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                  <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No tasks found') }}</p>
@@ -418,7 +418,7 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                    <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
@@ -563,7 +563,7 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                  <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                  <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
@@ -708,7 +708,7 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                   <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
@@ -853,7 +853,7 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                   <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
@@ -998,7 +998,7 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
+                                   <li ng-show="blankStateTask" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
