Delete Tag must function in list page like delete tag in show page (see Photo) ,fix #1199
Former-commit-id: bb80709071a2848768ed392068c099a87ea10e69 [formerly 5c58f1b40b16466c2e71003b554091e3e580ff81] [formerly 36d8c3abb3b514a940c5c0a36b0cba746e087027 [formerly 7172d187994a48a533af2c4ba84b34c0c518d111]]
Former-commit-id: e759c3a694aec00aefc49b4bfbb7dee4115c869c [formerly 401462595c67e2fade5d138349b833efe4e2441a]
Former-commit-id: ebadb9566ef3345bf661399f880cb75f6cfc279e

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -392,8 +392,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span draggable  ng-drag="dragTagItem(tag,task)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span draggable  ng-drag="dragTagItem(tag,task)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -539,8 +539,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -684,8 +684,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -829,8 +829,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -974,8 +974,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -1119,8 +1119,8 @@
                                        </form>
 
                                        </div>
-                                        <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                        <div class="col-md-5 col-xs-12 relatedTags">
+                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
