--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -287,8 +287,8 @@
                                     <%= account.industry %>                                   
                               </span>
                           </div>
-                          <div class="tagsContainer">
-                             <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                          <div class="tagsContainer relatedTags">
+                             <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;"> <a href="" ng-click="removeTag(tag,account)" class="removeRelatedTag select2-search-choice-close" ></a> <%= tag.name %>  </span>
                              <div class="clearfix"></div>
                           </div>
                         </td>
@@ -414,9 +414,9 @@
                 <div class="clearfix"></div>
               </div>
             </div>
-            <div class="tagsSection" ng-class="{hidden: account.tags==null}">
+            <div class="tagsSection relatedTags" ng-class="{hidden: account.tags==null}">
               <div class="sectionContent">
-                 <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                 <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;"> <a href="" ng-click="removeTag(tag,account)" class="removeRelatedTag select2-search-choice-close" ></a> <%= tag.name %>  </span>
                  <div class="clearfix"></div>
               </div>
             </div>
