fixing loading bugs on tags delete, tag attach and tag unattach
Former-commit-id: 61119b36fb1b7c6d6ee710e7542798e5dc16a8c7 [formerly 3474e28a90efda597388ccdf00b0184b0149e808] [formerly 55a0061991560c3e0f6d2418de8deea046b85d24 [formerly 0a7bd9ce81b5ac09debdf51926a8ecf184a3f433]]
Former-commit-id: 906c37a44c0ecab3d0eb27f71e096e5133e79225 [formerly 5d6882e48239748bf759dee9b2ae4a0a3d314f43]
Former-commit-id: 1b068e7a377a2248a39cc99487fe4b34d2b06813

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -181,8 +181,8 @@
                                <%= contact.firstname %> <%=contact.lastname%>
                             </a>
                           </div>
-                          <div class="tagsContainer">
-                             <span ng-repeat="tag in contact.tags"  draggable   ng-drag="dragTagItem(tag,contact)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                          <div class="tagsContainer" style=" margin-left: -5px; ">
+                             <span ng-repeat="tag in contact.tags"  draggable   ng-drag="dragTagItem(tag,contact)" class="pull-left task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
                              <div class="clearfix"></div>
                           </div>
                         </td>
