--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -287,8 +287,8 @@
                                     <%= account.industry %>                                   
                               </span>
                           </div>
-                          <div class="tagsContainer">
-                             <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                          <div class="tagsContainer" style=" margin-left: -5px; ">
+                             <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-left task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
                              <div class="clearfix"></div>
                           </div>
                         </td>
