--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -200,7 +200,7 @@
                                <%= casee.name %>
                             </a>
                           </div>
-                          <div class="tagsContainer" style='margin-top:5px'>
+                          <div class="tagsContainer" style='margin-top:5px margin-left: -5px;'>
                              <span ng-repeat="tag in casee.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-left task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
                              <div class="clearfix"></div>
                           </div>
