add dropdown menu on app, admin console application
Former-commit-id: 35c55cd8356234c55d4ea510c5cd45883e61006d [formerly 57c41e9d88403f6a339caff5407a3228fd741796] [formerly 1cc338878913fbbc785f81936270de4dcc02007e [formerly 3c1c5c276aada1b5a069aaa49858b6e02b37d71e]]
Former-commit-id: 14bb634b4782c405d64f90f1131b7864df48e4d9 [formerly 4e816da5224686ec4a84f682b13191f61d38ddd6]
Former-commit-id: 04edf6193881bf4dbfd71277eea0a13cc65cdb5e

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -2,8 +2,10 @@
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
-            {{_(active_app.label)}}
-            <i class="icon-angle-down"></i>
+
+            {{_(active_app.label)}}   
+
+            <i class="icon-angle-down fa fa-angle-down"></i>
            </a>
            <ul class="dropdown-menu">
             {%for application in apps %}
@@ -13,6 +15,7 @@
             {%endfor%}
            </ul>
         </div>
+
     </div>
   <div class=" subHeaderContent">
     <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount">
