--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -393,7 +393,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span draggable  ng-drag="dragTagItem(tag,task)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span draggable  ng-drag="dragTagItem(tag,task)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -540,7 +540,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -685,7 +685,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -830,7 +830,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -975,7 +975,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"><a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -1120,7 +1120,7 @@
 
                                        </div>
                                         <div class="col-md-5 col-xs-12 relatedTags">
-                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
+                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;"> <a href="" ng-click="removeTag(task_tag,task)" class="removeRelatedTag select2-search-choice-close" ></a> 
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
