--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -179,7 +179,13 @@
          <form id="task_actions" class="form-inline" role="form">
          <div class="row">
          <label class="col-xs-1  col-md-1" style=" text-align: center; padding-left: 23px; ">
-             <input  ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox">
+          <div class="customCheckbox" class="form-group">  
+              <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox" id="accountCheckAll">             
+              <label for="accountCheckAll" class="labelElement">
+                <span class="check"></span>
+                <span class="box"></span>
+              </label>  
+          </div>
          </label>
          <div class="col-xs-10 col-sm-11 col-md-11 actionsbtnDiv">
                <!-- <button ng-show="accounts"  title="Reopen Task" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" ng-class="{disabled: selectedCards.length==0}">
@@ -236,10 +242,10 @@
       <div class="row">
         <div class="col-md-12" ng-show="show=='list'">
             <div class="table-responsive showPage" ng-show="accounts">
-                <table class="table">
+                <table class="table accountstable">
                 <thead>
                     <tr>
-                        <th>
+                        <th>                      
                         </th>
                         <th>
                          Logo 
@@ -266,7 +272,23 @@
                 <tbody>
                     <tr ng-repeat="account in accounts | orderBy:fltby:reverse" droppable ng-drop="dropTag(account,$index)" >
                         <td>
-                          <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" >
+                          <div class="customCheckbox" class="form-group">  
+                          <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" id="accountCheck_<%= $index %>">             
+                            <label for="accountCheck_<%= $index %>" class="labelElement">
+                              <span class="check"></span>
+                              <span class="box"></span>
+                            </label>  
+                          </div>
+                         <!-- <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" >-->
+                         <!-- <div class="customCheck" class="form-group">    
+                            <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" id="checkMe_<%=$index%>">      
+                              <label for="check-me" class="labelElement">
+                                <span></span>
+                                <span class="check"></span>
+                                <span class="box"></span>
+                              </label>  
+                          </div>-->
+                          
                         </td>
                         <td>
                           <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
@@ -374,12 +396,19 @@
               </li>
             </ul>
           </div>
-            <div class="detailsSection" id="detailsId">
+            <div class="detailsSection detailsSectionNew" id="detailsId">
               <div class="head">
                 <div class="pic">
-                  <input  class="checkboxOnSmallScreen" title="Select Account" style="padding-top: 4px;position: absolute;left: 5px;" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" >
-                 <!-- <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">--><img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
-                  <img  ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                   <div class="customCheckbox checkboxOnSmallScreen "  style="position: absolute;left: 5px;">  
+                       <input title="Select Account" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)" id="accountCard_<%=$index%>">             
+                        <label for="accountCard_<%=$index%>" class="labelElement">
+                          <span class="check"></span>
+                          <span class="box"></span>
+                        </label>  
+                    </div>
+                 <!-- <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">-->
+                 <img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" style="margin-top: 30px;">
+                  <img  ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2" style="margin-top: 30px;">
                   <!--</a>-->
                 </div>
                 <div class="text">
@@ -396,13 +425,14 @@
                           <a href="/#/search/type:Account <%=account.industry%>"> - <%= account.industry %>
                           </a>
                     </span>
+                     <div class="spaceDiv"></div>
                      <br  ng-show="account.phones">
                     <span  ng-show="account.phones" style="color: rgb(160, 158, 158);">
-                         <!--<i class="fa " ng-class="account.phones.items[0].type=='fax' ? 'fa-fax' :'fa-phone' "></i>--> <%=account.phones.items[0].number%>
+                         <i class="fa " ng-class="account.phones.items[0].type=='fax' ? 'fa-fax' :'fa-phone' "></i>   <%=account.phones.items[0].number%>
                     </span>
                     <br  ng-show="account.emails">
                     <span  ng-show="account.emails" style="color: rgb(160, 158, 158);">
-                       <!--  <i class="fa fa-envelope"></i>--> <%=account.emails.items[0].email%>
+                        <i class="fa fa-envelope"></i>  <%=account.emails.items[0].email%>
                     </span>
                   
                     <!--<span>
@@ -416,7 +446,7 @@
             </div>
             <div class="tagsSection" ng-class="{hidden: account.tags==null}">
               <div class="sectionContent">
-                 <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                 <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag,account)" class="pull-right task-label task-tag badge tagTest" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
                  <div class="clearfix"></div>
               </div>
             </div>
@@ -627,6 +657,26 @@
         defaultContainerWidth: 800,
         autoresize: true
   });
+  $( window ).resize(function() {
+   
+    var cw = $('#card_0').width();
+    console.log(cw);
+    if (cw==0 && localStorage['accountShow']!='list') {
+       /*cw=210;*/
+        setTimeout(function(){
+         $('#card_0').trigger( "resize" ); 
+        },100);
+       
+    };
+    $('.cardElement').css({'height':(cw/1.618)+'px'});
+  });
+
+  /*var cw = $('#card_0').width();
+  $('.cardElement').css({'height':(cw/1.618)+'px'});
+  console.log(cw);*/
   $('.textfill').textfill({debug: true, maxFontPixels: 16});
-  $('#slimList').slimScroll({});
+  $('#slimList').slimScroll({});  console.log("ddddd");
+  /*$('.labelElement').click(function() {
+          console.log("testedfslhkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk");
+        }); */
 </script>
