Change the message to delete document
Former-commit-id: 155bdedb3b6ac6f89152cd881c1d60a524d7ab90 [formerly 2b1ce6b78ced26cfae9354eb9c286f12ecfc4274] [formerly f16c3fc003397d6c90508ab745c19b912241e0cb [formerly 110d0ca3c430654d9ef27d456bb8ec73c13e576e]]
Former-commit-id: af16651f924ad232fbdc18111d03c4da4b7265bd [formerly 6bc06409fced6033f3e6694a18373b6f13a801d1]
Former-commit-id: e928c2d9936b6214d76e446afff3534dcea76207

--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -194,7 +194,7 @@
                 <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                  <input  ng-click="deleteAttachement()" type="submit" class="btn red" value="Delete this Account">
+                  <input  ng-click="deleteAttachement()" type="submit" class="btn red" value="Delete this Document">
                   <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                 </div>
             </form>
