--- a/templates/base.html
+++ b/templates/base.html
@@ -113,13 +113,19 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   <!-- BEGIN HEADER -->
   <div class="header navbar navbar-default navbar-fixed-top ">
     <!-- BEGIN TOP NAVIGATION BAR -->
-    <div class="header-inner"  >
+    <div class="header-inner"   >
       <!-- BEGIN LOGO -->
      <!--  <a class="navbar-brand" href="/#/leads"> -->
-     
-     <a  class="navbar-brand" onclick="createPickerUploader()">
+      <div ng-controller="SearchFormController">
+     <a  class="navbar-brand" ng-click="createPickerUploader()">
+       {% if logo != None %}
+        <img src="{{logo.fileUrl}}" alt="logo" class="img-responsive" style="width:100px ;height:32px;">
+        {% else%}
         <img src="http://storage.googleapis.com/iogrow-gs/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
+        {% endif %}
+       
       </a>
+      </div>
     
       <!-- END LOGO -->
       <!-- BEGIN RESPONSIVE MENU TOGGLER -->
@@ -572,39 +578,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     KeenIO.log('in home page');
   </script>
 
-  <script type="text/javascript">
-function createPickerUploader(){
-
-          $('#importModal').modal('hide');
-          var developerKey = 'AIzaSyDHuaxvm9WSs0nu-FrZhZcmaKzhvLiSczY';
-          var docsView = new google.picker.DocsView()
-              .setIncludeFolders(true)
-              .setSelectFolderEnabled(true);
-          var picker = new google.picker.PickerBuilder().
-              addView(new google.picker.DocsUploadView()).
-              addView(docsView).
-              setCallback(uploaderCallback).
-              setOAuthToken(window.authResult.access_token).
-              setDeveloperKey(developerKey).
-              setAppId('935370948155-qm0tjs62kagtik11jt10n9j7vbguok9d').
-              build();
-          picker.setVisible(true);
-      };
-
-function uploaderCallback(data) {
-
-
-        if (data.action == google.picker.Action.PICKED) {
-                if(data.docs){
-                    // var params = {
-                    //               'file_id': data.docs[0].id,
-                    //               'file_type':$scope.file_type
-                    //               };
-                    // Lead.import($scope,params);
-                }
-        }
-      }
-  </script>
+ 
 
  <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
  <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
