--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -305,7 +305,7 @@
             <div class="">
               <div class="blank_slate_arrow"></div>
               <div class="thumbnail blank_slate_body">
-                <p class="lead">{{ _('No results found, try with another filter, Add topics to retrieve news from twitter')}}</p>
+                <p class="lead">{{ _('No results found, try with another filter, Add topics to retrieve news from social medias')}}</p>
               </div>
             </div>
           </div>
